# swbf2admin

./: .gitignore  SWBF2Admin.sln  ServerManager.cs  bf2exe_commands.txt  readme.md
DebugFiles/: Reset WebAdmin users.bat  SWBF2Admin.sqlite  gametypes_flags_calculator.htm
DebugFiles/web/: about.htm  autocomplete.htm  bans.htm  chat.htm  dashboard.htm  frame.htm  game.htm  gameedit.htm  general.htm  groups.htm  maps.htm  players.htm  statistics.htm  users.htm
DebugFiles/web/res/: ajax.js  bans.js  chat.js  dashboard.js  dialog.js  event.js  frame.js  game.js  gameedit.js  general.js  groups.js  maps.js  players.js  statistics.js  style.css  tab.js  users.js
DllLoader/: DllInjector.cs  DllLoader.csproj  Program.cs
DllLoader/Properties/: AssemblyInfo.cs
DllLoader/Properties/PublishProfiles/: win-x64.pubxml  win-x86.pubxml
IngameControllerServer/: IngameControllerServer.csproj  Logger.cs  Program.cs  TcpServer.cs
IngameControllerServer/Properties/: AssemblyInfo.cs
RconServer/: Logger.cpp  Logger.h  RconClient.cpp  RconClient.h  RconServer.cpp  RconServer.h  RconServer.vcxproj  RconServer.vcxproj.filters  bf2server.cpp  bf2server.h  config.h  dllmain.cpp  md5.cpp
SWBF2Admin/: AdminCore.cs  App.config  ComponentBase.cs  Program.cs  SWBF2Admin.csproj  packages.config
SWBF2Admin.Discord/: DiscordConfig.cs  DiscordPlugin.cs  SWBF2Admin.Discord.csproj  app.config  packages.config
SWBF2Admin.Discord/Modules/: SWBFModule.cs
SWBF2Admin.Discord/Properties/: AssemblyInfo.cs
SWBF2Admin.Discord/Services/: CommandHandlingService.cs
SWBF2Admin/Admin/: PlayerHandler.cs
SWBF2Admin/Config/: ConfigFileInfo.cs  CoreConfiguration.cs  FileHandler.cs
SWBF2Admin/Database/: PBKDF2.cs  SQLHandler.cs
SWBF2Admin/Export/: StatisticsReportGenerator.cs
SWBF2Admin/Gameserver/: IngameServerController.cs  IngameServerControllerConfiguration.cs  ServerManager.cs  StartEventArgs.cs  StopEventArgs.cs
SWBF2Admin/Maps/: AddmeReader.cs
SWBF2Admin/Maps/Lua/: LuaFunction.cs  LuaInstruction.cs  LuaVM.cs
SWBF2Admin/Plugins/: PluginManager.cs  SWBF2AdminPlugin.cs
SWBF2Admin/Properties/: AssemblyInfo.cs
SWBF2Admin/Properties/PublishProfiles/: linux-x64.pubxml  win-x64.pubxml  win-x86.pubxml
SWBF2Admin/Rcon/: RconChatEventArgs.cs  RconClient.cs  RconException.cs  RconNotAuthorizedException.cs
SWBF2Admin/Rcon/Packets/: PlayerListPacket.cs  RconPacket.cs
SWBF2Admin/Resources/cfg/: announce.xml  core.xml  game.xml  mods.aspyr.xml  mods.xml  players.xml  process_mods.xml
SWBF2Admin/Resources/template/: ServerSettings.cfg
SWBF2Admin/Runtime/Announce/: Announce.cs  AnnounceConfiguration.cs  AnnounceEventArgs.cs  AnnounceHandler.cs  AnnounceHandlerConfiguration.cs
SWBF2Admin/Runtime/ApplyMods/: HexEdit.cs  LvlMod.cs  LvlWriter.cs  LvlWriterConfig.cs
SWBF2Admin/Runtime/Commands/: ChatCommand.cs  CommandDispatcher.cs
SWBF2Admin/Runtime/Game/: GameClosedEventArgs.cs  GameHandler.cs  GameHandlerConfiguration.cs  StatisticsExport.cs
SWBF2Admin/Scheduler/: DelayedSchedulerTask.cs  RepeatingSchedulerTask.cs  SchedulerTask.cs  TaskScheduler.cs
SWBF2Admin/Structures/: ChatMessage.cs  GameInfo.cs  GameMode.cs  Player.cs  PlayerBan.cs  PlayerGroup.cs  PlayerStatistics.cs  ServerInfo.cs  ServerMap.cs  ServerSettings.cs
SWBF2Admin/Utility/: Constants.cs  Log.cs  Logger.cs  Util.cs
SWBF2Admin/Web/: ApiRequestParams.cs  EncodeHtmlResolver.cs  WebPage.cs  WebServer.cs  WebUser.cs
licenses/: discord.net_license.txt
rconserver-aspyr/: CMakeLists.txt  bf2server.cpp  bf2server.h
rconserver-galaxy/: CMakeLists.txt  Logger.cpp  Logger.h  RconClient.cpp  RconClient.h  RconServer.cpp  bf2server.cpp  dllmain.cpp  md5.cpp
(+88 files in other folders)
